[BUGFIX] Deleting a feature not working
Fixes #159

If toolbar is too long, float left put an other line.

--- a/lizmap/www/css/map.css
+++ b/lizmap/www/css/map.css
@@ -378,6 +378,9 @@ Timemanager
   padding-left:0.2em;
   padding-right:0.2em;
 }
+#edition-menu div.btn-group a.btn.btn-small {
+    float: left;
+}
 
 
 #content.mobile #toolbar{
